yamdi-1.3:
   * [Fix] SCRIPTDATAVARIABLEEND tag of the onMetaData object was missing
   * [Add] XML output of the meta data with option -x [teshock]
   * [Add] Makefile and manpage [xtat]

yamdi-1.2:
   * [Fix] Width and height calculation of ScreenVideo stream was
           wrong
   * [Add] onLastSecond event with option -l

yamdi-1.1:
   * [Fix] Width and height calculation of H.263 video streams with
           custom 16bit width and height was wrong.

yamdi-1.0:
   * [Add] Width and height detection for VP6 alpha video

yamdi-1.0beta3:
   * [Add] Width and height detection for VP6 video (without
           alpha) [hephooey]
   * [Add] More metadata: calculated framerate, videodatarate and
           audiodatarate.

yamdi-1.0beta2:
   * [Fix] The last video tag or audio tag has not been copied
   * [Add] If the video stream is Sorenson H.263, Screen Video or
           Screen Video 2 the width and height will be in the
           meta data.

yamdi-1.0beta:
   * Initial release
