@@ -1,4 +1,4 @@
- * Copyright (c) 2007, Ingo Oppermann
+ * Copyright (c) 2007-2008, Ingo Oppermann
  * All rights reserved.
  * 
  * Redistribution and use in source and binary forms, with or without
