@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH YAMDI 1 "April 27, 2008"
+.TH YAMDI 1 "May 24, 2008"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -31,7 +31,7 @@ The source FLV file.
 The resulting FLV file with the metatags. If the output file is '-' the FLV file will be written to stdout.
 .TP
 .B \-x
-A XML file with the resulting metadata information. If the output file is ommited, only metadata will be generated.
+An XML file with the resulting metadata information. If the output file is ommited, only metadata will be generated.
 .TP
 .B \-c
 A string that will be written into the creator tag.
